fix(table): vertical overflow

--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -39,4 +39,7 @@
   flex-grow: 1;
   padding: 1.5rem 3rem;
   padding-top: 0;
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
 }
